<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.app.facepro.faceproschool.ui.otp.OtpViewModel" />
        <variable
            name="onClickListener"
            type="com.app.facepro.faceproschool.ui.otp.OtpClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="181dp"
            android:layout_height="36dp"
            android:background="@drawable/rect_bg_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:visibility="@{!vm.isVisibleOTP()}"
            android:text="@string/send"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:onClick="@{()->onClickListener.sendOTPOnClick()}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPinView" />
        <Button
            android:id="@+id/btn_validate"
            android:layout_width="181dp"
            android:layout_height="36dp"
            android:background="@drawable/rect_bg_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:visibility="@{vm.isVisibleOTP()}"
            android:text="@string/validate"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:onClick="@{()->onClickListener.validateOTPOnClick()}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPinView" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bg_cloud_orange" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="59dp"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="59dp"
            android:visibility="@{!vm.isVisibleOTP()}"
            android:layout_marginRight="59dp"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:text="@string/enter_registered_mobile_number_to_send_one_time_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rect_rounded_bg"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:text="@={vm.phoneNumber}"
            android:visibility="@{!vm.isVisibleOTP()}"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:hint="Phone Number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/txt_OTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:textSize="16dp"
            android:visibility="@{vm.isVisibleOTP()}"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:text="@string/enter_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone_number" />

        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:cursorVisible="true"
            android:hint="0"
            android:inputType="number"
            android:visibility="@{vm.isVisibleOTP()}"
            android:itemBackground="@color/light_blue"
            android:padding="@dimen/common_padding"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/grey_text"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="5"
            app:itemHeight="48dp"
            app:itemRadius="10dp"
            app:itemSpacing="10dp"
            android:text="@={vm.otpNumber}"
            app:itemWidth="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_OTP"
            app:lineColor="@color/white"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:progressState="@{vm.otpSendResult}" />

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name_details"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
