<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.app.facepro.faceproschool.ui.profile.ProfileViewModel" />

        <variable
            name="onClickListener"
            type="com.app.facepro.faceproschool.ui.profile.ProfileClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/layout_main_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:focusable="true"
            android:hint="@string/hint_user_name"
            android:textColorHint="@color/grey_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line_edit_text"
                android:enabled="@{vm.isEditProfile()}"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@={vm.profileRequest.customerName}"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:layout_editor_absoluteY="383dp" />

            <requestFocus></requestFocus>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/grey_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name_layout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line_edit_text"
                android:enabled="@{vm.isEditProfile()}"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@={vm.profileRequest.email}"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_address"
            android:textColorHint="@color/grey_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email_layout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/under_line_edit_text"
                android:enabled="@{vm.isEditProfile()}"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@={vm.profileRequest.address}"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_circle_user"
            android:onClick="@{()->onClickListener.profileImageOnClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="156dp"
                android:layout_height="156dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/layout_camera"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_circle_black_transperent"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/include">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/bg_circle_black_transperent"
            android:onClick="@{()-> onClickListener.editOnClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_edit_black_24dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rect_bg_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:onClick="@{()-> onClickListener.submitOnClick()}"
            android:text="Submit"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{vm.isEditProfile()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:progressState="@{vm.result}" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="Change password"
            android:layout_marginStart="16dp"
            android:textColor="@color/grey_text"
            android:background="@drawable/under_line_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_marginRight="16dp"
            android:onClick="@{()->onClickListener.changePasswordOnClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_address_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
